Add local spectrum css file and remove properties with *

--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -1,10 +1,9 @@
 /* stylelint-disable */
 @use 'sass:math';
-@import "spectrum-colorpicker/spectrum";
 @import "codemirror/lib/codemirror";
 @import "codemirror/theme/hopscotch";
 
-
+@import "spectrum.scss";
 @import "gjs_variables.scss";
 
 
