--- a/src/styles/scss/_gjs_layers.scss
+++ b/src/styles/scss/_gjs_layers.scss
@@ -143,6 +143,11 @@ $layerNameSpacing: 4px !default;
       &:active {
         cursor: move;
       }
+
+      &--no-edit {
+        pointer-events: none;
+        display: none;
+      }
     }
 
     &.#{$nv-prefix}hovered > .gjs-layer-title-c > .#{$nv-prefix}layer-title {
