--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -676,10 +676,13 @@ a {
 
 .sp-gold-item {
   max-width: 250px;
+  display: flex;
+  align-items: center;
 }
 
 .sp-logo {
-  max-width: 100%;;
+  width: 250px;
+  max-width: 100%;
 }
 
 .flex-center {
