Support rotating of elements
feat: rotating is almost done, just need to fix the resizing

feat: :bug: fixed the rotating element rectangle not keeping bounding rectangle

fix: :fire: removed comments

Discard changes to dist/index.d.ts

Discard changes to dist/css/grapes.min.css

Discard changes to src/utils/mixins.ts

--- a/src/styles/scss/_gjs_canvas.scss
+++ b/src/styles/scss/_gjs_canvas.scss
@@ -422,6 +422,19 @@ $guide_pad: 5px !default;
   cursor: nwse-resize;
 }
 
+.#{$app-prefix}rotator-c {
+  pointer-events: all;
+  position: absolute;
+  border: 3px solid $colorBlue;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: #fff;
+  margin: $hndlMargin;
+  top: -20px;
+  left: 50%;
+}
+
 .#{$pn-prefix}panel {
   .#{$app-prefix}resizer-h {
     background-color: rgba(0, 0, 0, 0.2);
