--- a/src/styles/scss/_gjs_canvas.scss
+++ b/src/styles/scss/_gjs_canvas.scss
@@ -232,7 +232,7 @@ $guide_pad: 5px;
   .#{$app-prefix}highlighter,
   .#{$app-prefix}highlighter-sel {
     position: absolute;
-    outline: 1px solid $colorBlue;
+    outline: 3px solid #4032a8;
     outline-offset: -1px;
     pointer-events: none;
     width: 100%;
@@ -244,7 +244,7 @@ $guide_pad: 5px;
   }
 
   .#{$app-prefix}highlighter-sel {
-    outline: 3px solid $colorBlue;
+    outline: 6px solid #4032a8;
   }
 
   ##{$app-prefix}tools, .#{$app-prefix}tools {
