--- a/src/styles/scss/_gjs_variables.scss
+++ b/src/styles/scss/_gjs_variables.scss
@@ -34,7 +34,7 @@ $mainDklColor:      rgba(0, 0, 0, 0.1) !default;
 $mainLhColor:       rgba(255, 255, 255, 0.1) !default; /* #515151 */
 $mainLhlColor:      rgba(255, 255, 255, 0.7) !default;
 $fontColorDk:       #777 !default;
-$colorBlue:         #3b97e3 !default;
+$colorBlue:         #4032a8 !default;
 $colorRed:          #dd3636 !default;
 $colorYell:         #ffca6f !default;
 $colorGreen:        #62c462 !default;
