--- a/src/styles/scss/_gjs_assets.scss
+++ b/src/styles/scss/_gjs_assets.scss
@@ -48,7 +48,7 @@
   position: relative;
   height: 70px;
   width: 30%;
-  background-color: $mainColor;
+  background-color: var(--main-color);
   border-radius: 2px;
   float: left;
   overflow: hidden;
@@ -115,11 +115,11 @@
 }
 
 .#{$am-prefix}highlight {
-  background-color: $mainLhColor;
+  background-color: var(--main-light-color);
 }
 
 .#{$am-prefix}assets-cont {
-  background-color: $mainDklColor;
+  background-color: var(--secondary-dark-color);
   border-radius: 3px;
   box-sizing: border-box;
   padding: 10px;
