--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -36,11 +36,11 @@ $prefix: $app-prefix;
 
 @import "gjs_status";
 
-$colorsAll: (one, $primaryColor),
-  (two, $secondaryColor),
-  (three, $tertiaryColor),
-  (four, $quaternaryColor),
-  (danger, $colorRed);
+$colorsAll: (one, var(--primary-color)),
+  (two, var(--secondary-color)),
+  (three, var(--tertiary-color)),
+  (four, var(--quaternary-color)),
+  (danger, var(--color-red));
 
 .#{$prefix} {
   @each $cnum, $ccol in $colorsAll {
@@ -63,29 +63,29 @@ $colorsAll: (one, $primaryColor),
 
 .#{$app-prefix}bg {
   &-main {
-    background-color: $mainColor;
+    background-color: var(--main-color);
   }
 }
 
 .#{$app-prefix}color {
   &-main {
-    color: $fontColor;
-    fill: $fontColor;
+    color: var(--font-color);
+    fill: var(--font-color);
   }
 
   &-active {
-    color: $fontColorActive;
-    fill: $fontColorActive;
+    color: var(--font-color-active);
+    fill: var(--font-color-active);
   }
 
   &-warn {
-    color: $colorWarn;
-    fill: $colorWarn;
+    color: var(--color-warn);
+    fill: var(--color-warn);
   }
 
   &-hl {
-    color: $colorHighlight;
-    fill: $colorHighlight;
+    color: var(--color-highlight);
+    fill: var(--color-highlight);
   }
 }
 
@@ -130,7 +130,7 @@ $colorsAll: (one, $primaryColor),
 }
 
 .#{$app-prefix}drag-helper {
-  background-color: $colorBlue !important;
+  background-color: var(--color-blue) !important;
   pointer-events: none !important;
   position: absolute !important;
   z-index: 10 !important;
@@ -165,7 +165,7 @@ $colorsAll: (one, $primaryColor),
 
 // Custom scrollbars for Chrome
 .#{$app-prefix}editor-cont ::-webkit-scrollbar-track {
-  background: $mainDklColor;
+  background: var(--secondary-dark-color);
 }
 
 .#{$app-prefix}editor-cont ::-webkit-scrollbar-thumb {
@@ -177,6 +177,46 @@ $colorsAll: (one, $primaryColor),
 }
 
 /********************* MAIN ************************/
+// @property --input-padding {
+//   syntax: "<length>";
+//   inherits: false;
+//   initial-value: #{$inputPadding};
+// }
+
+:root {
+  --main-color: #{$mainColor};
+  --primary-color: #{$primaryColor};
+  --secondary-color: #{$secondaryColor};
+  --tertiary-color: #{$tertiaryColor};
+  --quaternary-color: #{$quaternaryColor};
+  --font-color: #{$fontColor};
+  --font-color-active: #{$fontColorActive};
+  --main-dark-color: #{$mainDkColor};
+  --secondary-dark-color: #{$mainDklColor};
+  --main-light-color: #{$mainLhColor};
+  --secondary-light-color: #{$mainLhlColor};
+  --color-blue: #{$colorBlue};
+  --color-red: #{$colorRed};
+  --color-yellow: #{$colorYell};
+  --color-green: #{$colorGreen};
+  --left-width: #{$leftWidth};
+  --color-highlight: #{$colorHighlight};
+  --color-warn: #{$colorWarn};
+  --handle-margin: #{$hndlMargin};
+  --light-border: #{$lightBorder};
+  --arrow-color: #{$arrowColor};
+  --dark-text-shadow: #{$darkTextShadow};
+  --color-input-padding: #{$colorpSize};
+  --input-padding: #{$inputPadding}; // Has to be a single value
+  --padding-elem-classmanager: #{$paddElClm};
+  --upload-padding: #{$uploadPadding};
+  --animation-duration: #{$animSpeed};
+  --main-font: #{$mainFont};
+  --font-size: #{$fontSize};
+  --placeholder-background-color: #{$placeholderColor};
+  --canvas-top: #{$canvasTop};
+}
+
 .clear{ clear:both }
 
 .no-select{
@@ -194,8 +234,8 @@ $colorsAll: (one, $primaryColor),
   }
 
   &editor {
-    font-family: $mainFont;
-    font-size: $fontSizeS;
+    font-family: var(--main-font);
+    font-size: var(--font-size);
     position: relative;
     box-sizing: border-box;
     height: 100%;
@@ -227,7 +267,7 @@ $colorsAll: (one, $primaryColor),
 
 .#{$com-prefix}badge, .#{$app-prefix}badge{
 	pointer-events: none;
-	background-color: $colorBlue;
+	background-color: var(--color-blue);
 	color: #fff;
 	padding: 2px 5px;
 	position: absolute; z-index: 1;
@@ -236,7 +276,7 @@ $colorsAll: (one, $primaryColor),
   display: none;
 }
 .#{$app-prefix}badge-warning{
-	background-color: $colorYell;
+	background-color: var(--color-yellow);
 }
 .#{$app-prefix}placeholder,
 .#{$com-prefix}placeholder,
@@ -252,14 +292,14 @@ $colorsAll: (one, $primaryColor),
   border-style: solid !important;
   outline: none;
   box-sizing: border-box;
-  transition: top $animSpeed, left $animSpeed,
-    width $animSpeed, height $animSpeed;
+  transition: top var(--animation-duration), left var(--animation-duration),
+    width var(--animation-duration), height var(--animation-duration);
 }
 
 .#{$app-prefix}placeholder.horizontal,
 .#{$com-prefix}placeholder.horizontal,
 .#{$nv-prefix}placeholder.horizontal {
-  border-color: transparent $placeholderColor;
+  border-color: transparent var(--placeholder-background-color);
   border-width: 3px 5px;
   margin: -3px 0 0;
 }
@@ -267,7 +307,7 @@ $colorsAll: (one, $primaryColor),
 .#{$app-prefix}placeholder.vertical,
 .#{$com-prefix}placeholder.vertical,
 .#{$nv-prefix}placeholder.vertical {
-  border-color: $placeholderColor transparent;
+  border-color: var(--placeholder-background-color) transparent;
   border-width: 5px 3px;
   margin: 0 0 0 -3px;
 }
@@ -275,7 +315,7 @@ $colorsAll: (one, $primaryColor),
 .#{$app-prefix}placeholder-int,
 .#{$com-prefix}placeholder-int,
 .#{$nv-prefix}placeholder-int {
-	background-color: $placeholderColor;
+	background-color: var(--placeholder-background-color);
   box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
 	height: 100%; width: 100%;
 	pointer-events: none;
@@ -302,7 +342,7 @@ $colorsAll: (one, $primaryColor),
   @extend .no-select;
 
   font-weight: lighter;
-  background-color: $mainDklColor;
+  background-color: var(--secondary-dark-color);
   letter-spacing: 1px;
   padding: 9px 10px 9px 20px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.25);
@@ -325,7 +365,7 @@ $colorsAll: (one, $primaryColor),
 	float:left;
 
 	> form {
-	  background-color: $mainDklColor;
+	  background-color: var(--secondary-dark-color);
 	  border: 2px dashed;
 	  border-radius: 3px;
 	  position: relative;
@@ -333,7 +373,7 @@ $colorsAll: (one, $primaryColor),
 	  margin-bottom: 15px;
 
 	  	&.#{$am-prefix}hover {
-			border: 2px solid $colorGreen;
+			border: 2px solid var(--color-green);
 			color: lighten($colorGreen, 5%); /*#7ee07e*/
 		}
 
@@ -343,7 +383,7 @@ $colorsAll: (one, $primaryColor),
 
 	  	##{$am-prefix}uploadFile{
 	  		@include opacity(0);
-	  		padding: $uploadPadding;
+	  		padding: var(--upload-padding);
 		  	width: 100%;
 		  	box-sizing: border-box;
 		}
@@ -351,7 +391,7 @@ $colorsAll: (one, $primaryColor),
 
 	##{$am-prefix}title {
 		position: absolute;
-		padding: $uploadPadding;
+		padding: var(--upload-padding);
 		width: 100%;
 	}
 }
@@ -373,7 +413,7 @@ $colorsAll: (one, $primaryColor),
 
 	&##{$cm-prefix}htmlmixed {
 		padding-right: 10px;
-		border-right: 1px solid $mainDkColor;
+		border-right: 1px solid var(--main-dark-color);
 		##{$cm-prefix}title { color: #a97d44;}
 	}
 	&##{$cm-prefix}css {
@@ -381,7 +421,7 @@ $colorsAll: (one, $primaryColor),
 		##{$cm-prefix}title { color: #ddca7e;}
 	}
 	##{$cm-prefix}title {
-	  background-color: $mainDkColor;
+	  background-color: var(--main-dark-color);
 	  font-size: 12px;
 	  padding: 5px 10px 3px;
 	  text-align: right;
@@ -401,12 +441,12 @@ $colorsAll: (one, $primaryColor),
   .sp-hue{ left: 90%; }
   .sp-color{right: 15%;}
   .sp-container {
-    border: 1px solid $mainDkColor;
-    box-shadow: 0 0 7px $mainDkColor;
+    border: 1px solid var(--main-dark-color);
+    box-shadow: 0 0 7px var(--main-dark-color);
     border-radius: 3px;
   }
   .sp-picker-container{border:none;}
-  .colpick_dark .colpick_color {  outline: 1px solid $mainDkColor;}
+  .colpick_dark .colpick_color {  outline: 1px solid var(--main-dark-color);}
   .sp-cancel, .sp-cancel:hover {
     bottom: -8px;
     color: #777 !important;
@@ -436,9 +476,9 @@ $colorsAll: (one, $primaryColor),
   	text-align: right;
   }
   .sp-container button, .sp-container button:hover, .sp-container button:active{
-  	background: $mainDkColor;
-    border-color: $mainDkColor;
-    color: $fontColor;
+  	background: var(--main-dark-color);
+    border-color: var(--main-dark-color);
+    color: var(--font-color);
     text-shadow: none;
     box-shadow: none;
     padding: 3px 5px;
