--- a/src/styles/scss/_gjs_rte.scss
+++ b/src/styles/scss/_gjs_rte.scss
@@ -7,7 +7,7 @@
   }
 
   &toolbar-ui {
-    border: 1px solid var(--main-dark-color);
+    border: 1px solid var(--grapes-main-dark-color);
     border-radius: 3px;
   }
 
@@ -21,7 +21,7 @@
     justify-content: center;
     padding: 5px;
     width: 25px;
-    border-right: 1px solid var(--main-dark-color);
+    border-right: 1px solid var(--grapes-main-dark-color);
     text-align: center;
     cursor: pointer;
     outline: none;
@@ -31,15 +31,15 @@
     }
 
     &:hover {
-      background-color: var(--main-light-color);
+      background-color: var(--grapes-main-light-color);
     }
   }
 
   &active {
-    background-color: var(--main-light-color);
+    background-color: var(--grapes-main-light-color);
   }
   &disabled {
-    color: var(--main-light-color);
+    color: var(--grapes-main-light-color);
     cursor: not-allowed;
     &:hover {
       background-color: unset;
